[package]
name = "rockhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rockhttp_lib = { git = "https://github.com/krishpranav/rockhttp/rockthttp_lib", path = "rockhttp_lib", version = "0.4.1", features = ["reload", "https"] }