[package]
name = "rockhttp_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rockhttp_lib"

[dependencies]
native-tls = {version = "0.2", optional = true}
notify = {version = "4.0.15", optional = true}
sha-1 = {version = "0.8.2", optional = true}
base64 = {version = "0.11.0", optional = true}

[features]
default = ["https"]
https = ["native-tls"]
reload = ["notify", "sha-1", "base64"]
